Achievement fixes and convenience tweaks

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -269,7 +269,7 @@ achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.newAdventures=Time for new adventures!
 achievement.newAdventures.desc=Welcome to Hardcore Ender Expansion!
 achievement.dragonEssence=Learning the powers
-achievement.dragonEssence.desc=Get Dragon Essence and use it on a Dragon Essence Altar
+achievement.dragonEssence.desc=Get Dragon Essence, use it on a Basic Essence Altar and convert it
 achievement.enhancedBrewingStand=Enhanced Brewery
 achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
 achievement.templeCaller=Rebirth
