Update lang files on website and move conflict message out
Closes #103

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -259,6 +259,7 @@ container.button.travel=Travel
 
 key.openCompendium=Ender Compendium
 key.openCompendium.bacon=Bacon Compendium
+key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix the issue in Controls menu.
 
 achievement.viewAchievements=View Achievements
 achievement.viewChallenges=View Challenges
