--- a/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/compendium/en_US.lang
@@ -39,28 +39,28 @@ ec.reg.18=Pressing the Compendium key while looking at an object or hovering ove
 ec.reg.19=This behavior works with Not Enough Items too, but you can bypass it by holding CTRL.
 
 ec.reg.80=Essence is used to unleash power of altars.
-ec.reg.81=Dragon Essence is gained by killing the Ender Dragon.
-ec.reg.82=Fiery Essence is dropped by Fire Golem and Scorching Lens, which can be found in a variation of Burning Mountains.
+ec.reg.81=Dragon Essence is gained by killing the $e:~Dragon.
+ec.reg.82=Fiery Essence is dropped by $e:~FireGolem and $e:~ScorchingLens, which can be found in a variation of $d:BurningMountains:Burning Mountains$.
 
 ec.reg.710=Overworld contains Strongholds, large and complex undeground structures made of Stone Brick.
 ec.reg.711=It is possible to locate Strongholds by releasing Eyes of Ender into the air.
-ec.reg.712=They contain a variety of rooms, one of which is the End Portal room. The portal leads to the Dragon Lair, and needs to be activated using Eyes of Ender.
-ec.reg.713=Chests in the Stronghold may contain Adventurer's Diary, Temple Caller and Knowledge Fragments.
+ec.reg.712=They contain a variety of rooms, one of which is the $b:end_portal_frame:End Portal$ room. The portal leads to the $d:DragonLair, and needs to be activated using Eyes of Ender.
+ec.reg.713=Chests in the Stronghold may contain $i:~adventurers_diary, $i:~temple_caller and $i:~knowledge_note$s.
 
 ec.reg.10=Short story of an adventurer, split across 16 pages.
 ec.reg.11=Opening a new diary page unlocks next page of the story, and locks the item to only open that page for other players.
 
-ec.reg.20=Rare drop from Endermen.
+ec.reg.20=Rare drop from $e:Enderman:Endermen$.
 ec.reg.21=Drop chance is 1 in 40 (2.5%%), Looting enchantment increases the chance.
 
 ec.reg.30=Jukebox discs with various pieces of qwertygiy's music.
 
 ec.reg.1410=This is the portal to the End dimension.
-ec.reg.1411=Once activated using Eyes of Ender, the portal will appear and teleport players who jump in it to the Dragon Lair.
-ec.reg.1412=Unlike Overworld, the End spreads out from the middle, and going far away from the Dragon Lair will let you uncover many new structures and resources.
+ec.reg.1411=Once activated using Eyes of Ender, the portal will appear and teleport players who jump in it to the $d:DragonLair.
+ec.reg.1412=Unlike Overworld, the End spreads out from the middle, and going far away from the $d:DragonLair will let you uncover many new structures and resources.
 ec.reg.1413=The further you travel, the more abundant some of the structures and resources become.
 
-ec.reg.40=Core component of the Basic Essence Altar.
+ec.reg.40=Core component of the $b:~essence_altar/0.
 
 ec.reg.51=Basic altar is converted into a specific type of altar by giving it one Essence, and 8 blocks and items it requests.
 ec.reg.52=Transformed altars can be given 32 of Essence per right-click, or 1 while sneaking.
