--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -76,6 +76,7 @@ tile.laboratoryObsidian.name=Laboratory Obsidian
 tile.laboratoryFloor.name=Laboratory Floor
 tile.laboratoryStairs.name=Laboratory Stairs
 tile.laboratoryGlass.name=Laboratory Glass
+tile.sacredStone.name=Sacred Stone
 
 item.essence.dragon.name=Dragon Essence
 item.essence.dragon.bacon.name=Bacon Essence
